--- a/app/templates/components/user-listing.hbs
+++ b/app/templates/components/user-listing.hbs
@@ -20,10 +20,6 @@
     </div>
     </article>
 </div>
-{{log user.id currentUserId}}
-{{#if (eq user.id currentUserId)}}
-    {{log "user" user.id}}
-{{/if}}
 
 {{#if isShowingModal}}
 <div class="create-user">
@@ -48,6 +44,11 @@
             <div class="input-lable">Email:</div>
             <div class="emp-input">
                 {{input type="text" value=user.email placeholder="Email" size="30" maxlength="101"}}
+                {{#if showValidationErrors}}
+                    <span class="validation">
+                        {{v-get model.user 'email' 'message'}}
+                    </span>
+                {{/if}}
             </div>
             {{#each user.address as |address|}}
                 <h4 class="p-t-15">{{address.type}}</h4>
@@ -65,8 +66,8 @@
                 </div>
             {{/each}}
         <div class="p-t-15">
-        <button class="button" onclick={{action (mut showSaveConfirm) true}}>Save</button>
-        <button class="button" onclick={{action (mut showRemoveConfirm) true}}>Remove</button>
+            <button class="button" onclick={{action (mut showSaveConfirm) true}}>Save</button>
+            <button class="button" onclick={{action (mut showRemoveConfirm) true}}>Remove</button>
         </div>
     </div>
   </div>
