--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -120,3 +120,10 @@
     color: red;
     font-weight: 600;
 }
+
+.text-truncated {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 245px !important;
+}
